--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Axel Van Dyck TITLE
-logo: /assets/img/logo.png
-description: TExt below the image
+logo: /assets/img/CV Picture.jpg
+description: ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester. 
+[Visit my GitHub Profile](https://github.com/avandyck16)
 show_downloads: false
 theme: jekyll-theme-minimal
