--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 title: Axel Van Dyck
 logo: /assets/img/cvpic_circle.png
-description: ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester. 
-show_downloads: true
+description: |
+  ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester.  
+
+  [Visit my GitHub Profile](https://github.com/avandyck16)
+#show_downloads: true
 #google_analytics: [Visit my GitHub Profile](https://github.com/avandyck16)
 theme: jekyll-theme-minimal
