--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: /assets/img/cvpic_circle.png
 description: |
   ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester.  
 
-  [Visit my GitHub Profile](https://github.com/avandyck16)
+  Visit my GitHub Profile at https://github.com/avandyck16
 #show_downloads: true
 #google_analytics: [Visit my GitHub Profile](https://github.com/avandyck16)
 theme: jekyll-theme-minimal
