--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: Axel Van Dyck
 logo: /assets/img/cvpic_circle.png
-description: |
-  ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester.  
-
-
-  Visit my GitHub Profile at https://github.com/avandyck16
+description: ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester.  
+repository: https://github.com/avandyck16
 #show_downloads: true
 #google_analytics: [Visit my GitHub Profile](https://github.com/avandyck16)
 theme: jekyll-theme-minimal
