--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Axel Van Dyck
-logo: /assets/img/cvpic_circle.png
+logo: /assets/img/circle_2.png
+#logo: /assets/img/cvpic_circle.png
 description: ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester.  
 repository: https://github.com/avandyck16
 #show_downloads: true
