--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Axel Van Dyck
 logo: /assets/img/circle_2.png
 #logo: /assets/img/cvpic_circle.png
-description: ¡Hola! Bienvenido a mi portafolio de Quality Assurance Tester.  
+description: ¡Hola! Te doy la bienvenida a mi portafolio de proyectos de QA Tester.  
 repository: https://github.com/avandyck16
-#show_downloads: true
+show_downloads: false
 #google_analytics: [Visit my GitHub Profile](https://github.com/avandyck16)
 theme: jekyll-theme-minimal
